```feat(warehouse): create table dynamically in DorisDataStorage
DorisDataStorage now creates the database and table dynamically based on the incoming metrics data.
This change removes the need for manual database and table creation in the Doris database.
The connection validation and table creation have been adapted to enhance the auto-configuration
capabilities.
```